--- a/06_JSP/ch03_semiServlet/WebContent/ex1.html
+++ b/06_JSP/ch03_semiServlet/WebContent/ex1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<form action="hw" method="post">
-		<input type="submit" value="클릭">
+		<input type="submit" value="HWorld POST방식으로 요청">
 	</form>
 </body>
 </html>
