--- a/06_JSP/ch02_semiJSP/WebContent/index.html
+++ b/06_JSP/ch02_semiJSP/WebContent/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<style>
-	.h1{
-		color: led;
-	}
-</style>
-<script>
-	window.onload = function () {
-		alert('hello');
-	};
-</script>
+  <meta charset="UTF-8">
+  <title>Insert title here</title>
+  <script>
+  	window.onload = function(){
+  		alert('Hello, World!');
+  	};
+  </script>
 </head>
 <body>
-	<h1 class="h1">이 파일은 index.html파일 입니다.</h1>
+	<h1>이 파일은 index.html파일입니다</h1>
 </body>
 </html>
