--- a/06_JSP/ch04_servlet/WebContent/lect/ex1_get_post.html
+++ b/06_JSP/ch04_servlet/WebContent/lect/ex1_get_post.html
@@ -3,23 +3,39 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Insert title here</title>
-	<script>
-	</script>
 </head>
 <body>
 	<a href="/ch04_servlet/Ex1?id=김&pw=ppp">Ex1서블릿에게 id와 pw넘기기(GET)</a>
 	<hr>
-	<button onclick="location.href ='../Ex1?id=박&pw=pp'">Ex1서블릿에게 id와 pw넘기기 (GET)</button>
-	<form action="../Ex1" method="get">
-		<p>ID<input type="text" name="id"></p>
-		<p>PW<input type="password" name="pw"></p>
-		<p><input type="submit" value="Ex1 서블릿에게 id와 pw넘기기(POST)"></p>
+	<button onclick="location.href= '../Ex1?id=김&pw=ppp'">Ex1서블릿에게 id와 pw넘기기(GET)</button>
+	<hr>
+	<form action="/ch04_servlet/Ex1" method="get">
+		<p>ID <input type="text" name="id" value="한"></p>
+		<p>PW <input type="password" name="pw"></p>
+		<p><input type="submit" value="Ex1 서블릿에게  id와 pw넘기기(GET)">
 	</form>
 	<hr>
-	<form action="../Ex1" method="get">
-		<p>ID<input type="text" name="id"></p>
-		<p>PW<input type="password" name="pw"></p>
-		<p><input type="submit" value="Ex1 서블릿에게 id와 pw넘기기(POST)"></p>
+	<form action="../Ex1" method="post">
+		<p>ID <input type="text" name="id" value="한"></p>
+		<p>PW <input type="password" name="pw"></p>
+		<p><input type="submit" value="Ex1 서블릿에게  id와 pw넘기기(POST)">
 	</form>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
